# kebab

./: .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  CODEOWNERS  README.md  pyproject.toml  release.sh
.github/workflow/: build-test-publish.yml
.github/workflows/: build-test-publish.yml  build-test.yml  publish.yml
cli/: cli.py
examples/: app.yaml  app2.yaml  demo.py  demo.yaml  demo_magic.py  envvar.py  logging.yaml  update.sh  util.py
kebab/: __init__.py  ali.py  aws.py  constants.py  exceptions.py  k8s.py  loader.py  loaders.py  magic.py  openers.py  sources.py  utils.py
kebab/cli/: cli.py
test/: test_envvar.py
tests/: conftest.py  test_ali.py  test_envvar.py  test_import.py  test_k8s.py  test_loader.py  test_loaders.py  test_magic.py  test_openers.py  test_reload.py  test_source.py  test_url.py  tools.py
tests/data/: conf.ini  conf1.yaml  conf2.json
