[tool.poetry]
name = "pykebab"
version = "0.8.2"
description = ""
authors = ["Yangming Huang <leonmax@gmail.com>"]
packages = [
    { include = "kebab" },
]

[tool.poetry.dependencies]
python = "^3.7"
deprecation = "^2.1.0"
pydantic = "^2.0.3"
# cli
click = { version = "^8.1.5", optional = true }
# aws
boto3 = { version = "^1.28.3", optional = true }
# k8s
kubernetes = { version = "^26.1.0", optional = true }
configparser = "^5.3.0"
pyyaml = "^6.0.1"
setuptools = "^68.0.0"
pyxdg = "^0.28"

[tool.poetry.extras]
cli = ["click"]
k8s = ["kubernetes"]
aws = ["boto3"]

[tool.poetry.dev-dependencies]
pytest = { version = "*" }
pytest-cov = { version = "*" }
pytest-black = { version = "*" }
mock = { version = "*" }
black = { version = "*" }
flake8 = { version = "*" }
flake8-black = { version = "*"}

[tool.poetry.scripts]
kebab = 'kebab.cli:run'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"
